# agent-sales-dashboards

./: .gitignore  README.md  main.py  pyproject.toml  server.py
agents/: graph.py  state.py
config/: settings.py
memory/: __init__.py
templates/: index.html
tests/: conftest.py  test_graph.py  test_loader.py  test_metrics.py  test_validators.py  test_web.py
tools/: combiner.py  dashboard_builder.py  loader.py  metrics.py
web/: validators.py
