[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sales-dashboard"
version = "0.2.0"
description = "LangGraph agent that builds sales dashboards for 3 audiences from a CSV"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
sales-dashboard = "main:main"
sales-dashboard-web = "server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
